--- a/19_baseline_model_MLP.ipynb
+++ b/19_baseline_model_MLP.ipynb
@@ -6,6 +6,7 @@
       "name": "19_baseline_model_MLP.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,11 +44,11 @@
       "metadata": {
         "id": "iBm3Ao-4qkKZ",
         "colab_type": "code",
+        "outputId": "aabd863b-9d34-4bf7-aaf4-62981faa7b0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 403
-        },
-        "outputId": "05b2ec4d-9a0e-41d1-b98e-96f2bb65d517"
+          "height": 348
+        }
       },
       "cell_type": "code",
       "source": [
@@ -75,23 +76,8 @@
         "\n",
         "plt.show()\n"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
-            "11493376/11490434 [==============================] - 0s 0us/step\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -105,19 +91,6 @@
           }
         }
       ]
-    },
-    {
-      "metadata": {
-        "id": "RWFE31rAqkUF",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "metadata": {
@@ -159,11 +132,11 @@
       "metadata": {
         "id": "4dr6sBMKqkco",
         "colab_type": "code",
+        "outputId": "4a5c0965-97d3-4d19-94ff-0c06319e8c2f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "a4914de4-71c9-47bd-fa07-f67bd3338b07"
+          "height": 34
+        }
       },
       "cell_type": "code",
       "source": [
@@ -172,12 +145,12 @@
         "\n",
         "print(X_train.shape)\n"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(60000, 28, 28) (10000,)\n"
+            "(60000, 28, 28)\n"
           ],
           "name": "stdout"
         }
@@ -203,11 +176,11 @@
       "metadata": {
         "id": "g8MnyQ0BsWRo",
         "colab_type": "code",
+        "outputId": "00fb520a-3598-42bc-f612-cb50a411843b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "a031d475-f631-41bb-dcd6-231427614a11"
+          "height": 34
+        }
       },
       "cell_type": "code",
       "source": [
@@ -222,7 +195,7 @@
         "num_classes = y_test.shape[1]\n",
         "print(y_test.shape)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,6 +209,140 @@
     {
       "metadata": {
         "id": "ENzTkHpWsWT9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# define baseline model\n",
+        "def baseline_model():\n",
+        "  # create model\n",
+        "  model = Sequential()\n",
+        "  model.add(Dense(num_pixels, input_dim=num_pixels, init='normal', activation='relu'))\n",
+        "  model.add(Dense(num_classes, init='normal', activation='softmax'))\n",
+        "  \n",
+        "  # Compile model\n",
+        "  model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+        "\n",
+        "  return model\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "7LGsYYzmwABa",
+        "colab_type": "code",
+        "outputId": "4c3351a1-cd79-46cb-c002-036cc5d1dd7f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 979
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "# build the model\n",
+        "model = baseline_model()\n",
+        "\n",
+        "# Fit the model\n",
+        "model.fit(X_train, y_train, validation_data=(X_test, y_test), nb_epoch=20, batch_size=200, verbose=2)\n",
+        "\n",
+        "# Final evaluation of the model\n",
+        "scores = model.evaluate(X_test, y_test, verbose=0)\n",
+        "print('Baseline Error: %.2f%%' % (100-scores[1]*100))\n"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:4: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(784, input_dim=784, activation=\"relu\", kernel_initializer=\"normal\")`\n",
+            "  after removing the cwd from sys.path.\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:5: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(10, activation=\"softmax\", kernel_initializer=\"normal\")`\n",
+            "  \"\"\"\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:4: UserWarning: The `nb_epoch` argument in `fit` has been renamed `epochs`.\n",
+            "  after removing the cwd from sys.path.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Train on 60000 samples, validate on 10000 samples\n",
+            "Epoch 1/20\n",
+            " - 2s - loss: 0.2783 - acc: 0.9211 - val_loss: 0.1413 - val_acc: 0.9572\n",
+            "Epoch 2/20\n",
+            " - 2s - loss: 0.1116 - acc: 0.9675 - val_loss: 0.0924 - val_acc: 0.9707\n",
+            "Epoch 3/20\n",
+            " - 2s - loss: 0.0717 - acc: 0.9798 - val_loss: 0.0786 - val_acc: 0.9775\n",
+            "Epoch 4/20\n",
+            " - 2s - loss: 0.0504 - acc: 0.9857 - val_loss: 0.0750 - val_acc: 0.9766\n",
+            "Epoch 5/20\n",
+            " - 2s - loss: 0.0375 - acc: 0.9892 - val_loss: 0.0679 - val_acc: 0.9793\n",
+            "Epoch 6/20\n",
+            " - 2s - loss: 0.0271 - acc: 0.9926 - val_loss: 0.0633 - val_acc: 0.9805\n",
+            "Epoch 7/20\n",
+            " - 2s - loss: 0.0211 - acc: 0.9946 - val_loss: 0.0623 - val_acc: 0.9812\n",
+            "Epoch 8/20\n",
+            " - 2s - loss: 0.0141 - acc: 0.9968 - val_loss: 0.0634 - val_acc: 0.9798\n",
+            "Epoch 9/20\n",
+            " - 2s - loss: 0.0111 - acc: 0.9976 - val_loss: 0.0595 - val_acc: 0.9808\n",
+            "Epoch 10/20\n",
+            " - 2s - loss: 0.0080 - acc: 0.9984 - val_loss: 0.0572 - val_acc: 0.9818\n",
+            "Epoch 11/20\n",
+            " - 2s - loss: 0.0067 - acc: 0.9988 - val_loss: 0.0677 - val_acc: 0.9796\n",
+            "Epoch 12/20\n",
+            " - 2s - loss: 0.0048 - acc: 0.9993 - val_loss: 0.0575 - val_acc: 0.9837\n",
+            "Epoch 13/20\n",
+            " - 2s - loss: 0.0026 - acc: 0.9999 - val_loss: 0.0597 - val_acc: 0.9835\n",
+            "Epoch 14/20\n",
+            " - 2s - loss: 0.0021 - acc: 0.9998 - val_loss: 0.0592 - val_acc: 0.9839\n",
+            "Epoch 15/20\n",
+            " - 2s - loss: 0.0019 - acc: 0.9999 - val_loss: 0.0633 - val_acc: 0.9831\n",
+            "Epoch 16/20\n",
+            " - 2s - loss: 0.0068 - acc: 0.9980 - val_loss: 0.1170 - val_acc: 0.9712\n",
+            "Epoch 17/20\n",
+            " - 2s - loss: 0.0176 - acc: 0.9940 - val_loss: 0.0754 - val_acc: 0.9797\n",
+            "Epoch 18/20\n",
+            " - 2s - loss: 0.0042 - acc: 0.9990 - val_loss: 0.0722 - val_acc: 0.9796\n",
+            "Epoch 19/20\n",
+            " - 2s - loss: 0.0011 - acc: 1.0000 - val_loss: 0.0643 - val_acc: 0.9831\n",
+            "Epoch 20/20\n",
+            " - 2s - loss: 5.3166e-04 - acc: 1.0000 - val_loss: 0.0627 - val_acc: 0.9834\n",
+            "Baseline Error: 1.66%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "uaOYQAqcwAPZ",
+        "colab_type": "code",
+        "outputId": "c46d1040-8ea0-4ed9-c750-a30825804608",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "print(100-scores[1]*100)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.6599999999999966\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "XAITcTxIwATt",
         "colab_type": "code",
         "colab": {}
       },
