--- a/palidml_test.ipynb
+++ b/palidml_test.ipynb
@@ -180,38 +180,12 @@
     },
     {
       "metadata": {
-        "id": "Ri8zoIU2lPK9",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "1EmhdaCAlPNR",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "EMOu_4lFlU0l",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "Total running time with Palidml : 0:0:28\n",
+        "Total running time with Palidml on macbook AMD Radeon Pro 560 : 0:0:28\n",
         "\n",
         "Total running time with colab GPU: 0:0:14"
       ]
