--- a/Course_1_Part_4_Lesson_4_Notebook.ipynb
+++ b/Course_1_Part_4_Lesson_4_Notebook.ipynb
@@ -12,8 +12,7 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -30,11 +29,7 @@
       "metadata": {
         "id": "N9-BCmi15L93",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 484
-        },
-        "outputId": "375e877d-da66-4c6f-943d-284db85e9874"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -64,42 +59,8 @@
         "\n",
         "model.fit(x_train, y_train, epochs=10, callbacks=[callbacks])"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
-            "32768/29515 [=================================] - 0s 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-            "26427392/26421880 [==============================] - 0s 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
-            "8192/5148 [===============================================] - 0s 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
-            "4423680/4422102 [==============================] - 0s 0us/step\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/resource_variable_ops.py:435: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Colocations handled automatically by placer.\n",
-            "Epoch 1/10\n",
-            "59904/60000 [============================>.] - ETA: 0s - loss: 0.4738 - acc: 0.8299\n",
-            "Reached 60% accuracy so cancelling training!\n",
-            "60000/60000 [==============================] - 8s 138us/sample - loss: 0.4735 - acc: 0.8300\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f295efbe240>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 1
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
